--- a/view/css/index.css
+++ b/view/css/index.css
@@ -6,6 +6,7 @@ html
 body
 {
     min-height: 100%;
+    
     display: flex;
     flex-direction: column;
 }
@@ -13,7 +14,14 @@ body
 #index_center
 {
     font-family: 'Ruda', sans-serif;
+
     text-align: center;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+
+    height: calc(100vh - 98.75px);
 }
 
 #index_center span
@@ -31,4 +39,14 @@ body
 {
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
     font-size: 50px;
+}
+
+@media screen and (max-width: 700px)
+{
+    #index_center h1
+    {
+        text-shadow: 10px 10px 4px rgba(0, 0, 0, 0.5);
+        font-size: 60px;
+    }
+
 }
