--- a/view/css/header.css
+++ b/view/css/header.css
@@ -16,15 +16,64 @@ header a
     text-transform: uppercase;
 }
 
+#profile_header
+{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+#profile_header img
+{
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+}
+
+#profile_header > p
+{
+    font-size: 30px;
+    margin-left: 10px;
+}
+
 #triangle
 {
     width: 0; 
-    height: 0; 
+    height: 0;
+    
+    margin-left: 5px;
 
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-top: 20px solid #C4C4C4;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid #C4C4C4;
 }
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
 
 @media screen and (max-width: 610px)
 {
