--- a/view/css/messanger.css
+++ b/view/css/messanger.css
@@ -1,14 +1,14 @@
 .messagebox
 {
-    /* position: absolute; */
+    position: absolute;
+
+    bottom: 20px;
+    left: 500px;
+    
     display: block;
     text-align: center;
-/* 
-    top: 50%;
-    left: 50%; */
 
-
-    background-color: white;
+    background-color: yellow;
 }
 
 .messagebox p
